<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:padding="@dimen/dim_20"
    tools:context=".TrainingActivity"
    >
        <TextView
            android:id="@+id/tv_logo"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:textColor="@color/orange_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:fontFamily="@font/lobster"
        />
        <TextView
            android:id="@+id/tv_action"
            android:text="@string/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/orange_max"
            android:layout_marginTop="16dp"
            app:fontFamily="@font/varela_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        />
        <ImageView
            android:id="@+id/iv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="TODO"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_action"
            app:layout_constraintBottom_toTopOf="@+id/sv_action_block"
        />
        <ScrollView
            android:id="@+id/sv_action_block"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:padding="@dimen/dim_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="90dp"
            >
            <TextView
                android:id="@+id/tv_current_exercise_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/information"
                app:fontFamily="@font/varela_round"
            />
        </ScrollView>
        <TextView
            android:id="@+id/tv_progress"
            android:text="@string/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/s_dim_18"
            android:textColor="@color/orange_max"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_action_block"
            app:fontFamily="@font/varela_round"
        />
        <TextView
            android:id="@+id/tv_approach"
            android:text="@string/approach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/s_dim_16"
            android:textColor="@color/orange_max"
            android:layout_marginTop="16dp"
            app:fontFamily="@font/varela_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_progress"
        />
        <Button
            android:id="@+id/b_next_action"
            android:text="@string/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_action_block"
            app:layout_constraintVertical_bias="0.928"
        />
</androidx.constraintlayout.widget.ConstraintLayout>